deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acas-prod
  labels:
    app.kubernetes.io/name: acas
    app.kubernetes.io/version: "2.0.0"
    environment: production
